Fixes nav on mobile

--- a/scss/modules/_navigation.scss
+++ b/scss/modules/_navigation.scss
@@ -78,6 +78,9 @@ header #logo_text {
     transform: translateY(-200%);
     transition-delay: 1s;
     background-color: rgba(255, 255, 255, .9);
+    .nav-is-white & {
+      background-color: transparent
+    }
     @media screen and (min-width: 1024px) {
       background-color: transparent;
       padding: 0;
