--- a/src/public/css/screen.css
+++ b/src/public/css/screen.css
@@ -253,6 +253,8 @@ header #logo_text {
     transform: translateY(-200%);
     transition-delay: 1s;
     background-color: rgba(255, 255, 255, 0.9); }
+    .nav-is-white .nav__menu {
+      background-color: transparent; }
     @media screen and (min-width: 1024px) {
       .nav__menu {
         background-color: transparent;
